backup_projeto-sre-devops_2025-08-17_20-03-57/sre/sre-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sre-whoami-ingress
  namespace: sre
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod" 
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - sre.tisl.com.br
    secretName: sre-whoami-tls-cert
  rules:
  - host: sre.tisl.com.br
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sre-whoami-service
            port:
              number: 80
